# basic_cmake_catch2

./: .clang-tidy  CMakeLists.txt  run_test.sh
src/test/: CMakeLists.txt  test_some.cpp
